Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,34 @@
       itemtype="http://schema.org/WebPage">
 <head>
 <script>if('http:'==location.protocol)location.replace(location.href.replace('http:','https:'))</script>
-<title itemprop="name">Komito Analytics at a Glance</title>
-<meta name="og:title" content="Komito Analytics at a Glance">
+
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
-<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@thedatamartinc">
-<meta name="twitter:url" content="http://datamart.github.io/Komito/">
-<meta itemprop="url" content="http://datamart.github.io/Komito/">
+
+<title>Komito Analytics at a Glance</title>
 <link rel="canonical" href="http://datamart.github.io/Komito/">
+<link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
+<meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+
+<meta itemprop="name" content="Komito Analytics at a Glance">
+<meta itemprop="url" content="http://datamart.github.io/Komito/">
+<meta itemprop="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+
+<meta property="og:title" content="Komito Analytics at a Glance">
+<meta property="og:url" content="http://datamart.github.io/Komito/">
+<meta property="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta property="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@thedatamartinc">
+<meta name="twitter:creator" content="@thedatamartinc">
+<meta name="twitter:title" content="Komito Analytics at a Glance">
+<meta name="twitter:url" content="http://datamart.github.io/Komito/">
+<meta name="twitter:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta name="twitter:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="styles-v2.css" rel="stylesheet">
 </head>
