Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <title>Komito Analytics at a Glance</title>
 <link rel="canonical" href="http://datamart.github.io/Komito/">
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
-<meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta name="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 
 <meta itemprop="name" content="Komito Analytics at a Glance">
 <meta itemprop="url" content="http://datamart.github.io/Komito/">
-<meta itemprop="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta itemprop="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 <meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics at a Glance">
 <meta property="og:url" content="http://datamart.github.io/Komito/">
-<meta property="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta property="og:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 <meta property="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
 
@@ -28,7 +28,7 @@
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics at a Glance">
 <meta name="twitter:url" content="http://datamart.github.io/Komito/">
-<meta name="twitter:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta name="twitter:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 <meta name="twitter:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
@@ -38,7 +38,12 @@
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Homepage"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px" height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00" points="0,0 0,20.1 19.8,0"/><polygon fill="#fb8600" points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#097AD2" points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span><b>Komito</b><i>Analytics</i></span></a>
+        <a href="/Komito/" title="Komito Homepage"><svg version="1.1"
+           xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
+           height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00"
+           points="0,0 0,20.1 19.8,0"/><polygon fill="#fb8600"
+           points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#097AD2"
+           points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span><b>Komito</b><i>Analytics</i></span></a>
       </div>
       <div class="hamburger">
         <div class="hamburger-box"><div class="hamburger-inner"></div></div>
