Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -165,8 +165,11 @@
         <a href="http://www.apache.org/licenses/LICENSE-2.0"
            rel="nofollow"
            title="Apache License">Apache License 2.0</a>
-        <br>© <script>document.write((new Date).getFullYear())</script>
-        <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+        <br>
+        <span>
+          © <script>document.write((new Date).getFullYear())</script>
+          <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+        </span>
       </p>
     </div>
   </div>
