Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -116,28 +116,31 @@
         <ul>
           <li>
             <a target="_blank" rel="nofollow" title="Adobe Analytics"
-               href="//www.adobe.com/marketing-cloud/web-analytics.html">
-              <img src="images/adobe-analytics-logo.png" alt="Adobe"></a>
+               href="//www.adobe.com/marketing-cloud/web-analytics.html"><img
+               src="images/adobe-analytics-logo.png" alt="Adobe"
+               width="276" height="43"></a>
           </li>
           <li>
             <a target="_blank" rel="nofollow" title="Baidu Analytics"
-               href="//tongji.baidu.com/">
-              <img src="images/baidu-logo.png" alt="Baidu"></a>
+               href="//tongji.baidu.com/"><img src="images/baidu-logo.png"
+               alt="Baidu" width="132" height="43"></></a>
           </li>
           <li>
             <a target="_blank" rel="nofollow" title="Clicktale"
-               href="//www.clicktale.com/">
-              <img src="images/clicktale-logo.png" alt="Clicktale"></a>
+               href="//www.clicktale.com/"><img src="images/clicktale-logo.png"
+               alt="Clicktale" width="220" height="43"></a>
           </li>
           <li>
             <a target="_blank" rel="nofollow" title="Google Analytics"
-               href="//www.google.com/analytics/">
-              <img src="images/google-analytics-logo.png" alt="Google Analytics"></a>
+               href="//www.google.com/analytics/"><img
+               src="images/google-analytics-logo.png" alt="Google Analytics"
+               width="245" height="43"></a>
           </li>
           <li>
             <a target="_blank" rel="nofollow" title="Urchin"
-               href="//support.google.com/urchin">
-              <img src="images/urchin-logo.png" alt="Urchin"></a>
+               href="//support.google.com/urchin"><img
+               src="images/urchin-logo.png" alt="Urchin"
+               width="143" height="43"></a>
           </li>
         </ul>
       </div>
