Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
            height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00"
            points="0,0 0,20.1 19.8,0"/><polygon fill="#fb8600"
            points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#097AD2"
-           points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span><b>Komito</b><i>Analytics</i></span></a>
+           points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span
+           class="thin-font"><b>Komito</b><i>Analytics</i></span></a>
       </div>
       <div class="hamburger">
         <div class="hamburger-box"><div class="hamburger-inner"></div></div>
@@ -73,7 +74,7 @@
     </div>
     <div class="kmt-page-hero">
       <div class="kmt-section">
-        <h1>Komito Analytics at a Glance</h1>
+        <h1 class="thin-font">Komito Analytics at a Glance</h1>
         <h2>Komito Analytics is an enhancement for the most popular web analytics software.</h2>
       </div>
     </div>
