Updated advanced metrics images.

--- a/index.html
+++ b/index.html
@@ -84,26 +84,32 @@
         <p>Unlock power of digital analytics with additional insights about visitor’s behavior.</p>
         <ul class="kmt-metrics">
           <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M52.3,49.5c0,2.7,1.8,5.1,4.6,6.4v1c-5.1-0.1-9.8-0.9-14.2-5.2c-1,0.1-2.1,0.2-3.2,0.2c-4.7,0-9.1-1.3-12.5-3.4c7.2,0,13.9-2.3,19-6.4c2.6-2.1,4.6-4.5,6.1-7.2c1.5-2.9,2.3-5.9,2.3-9.1c0-0.5,0-1-0.1-1.5c3.6,2.9,5.8,6.9,5.8,11.3c0,5.1-3,9.7-7.6,12.6C52.3,48.8,52.3,49.1,52.3,49.5z M26.8,7c13.1,0,23.8,8.5,23.8,19c0,10.5-10.6,19-23.8,19c-1.3,0-2.5-0.1-3.7-0.2c-5.1,5-11,5.9-16.9,6v-1.2c3.2-1.5,5.7-4.3,5.7-7.5c0-0.5,0-0.9-0.1-1.3C6.4,37.2,3,31.9,3,26C3,15.5,13.6,7,26.8,7z"/></svg>
             <h4>Social interaction</h4>
             <i>Tracks social networks events.</i>
           </li>
           <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M37.9,8.4l13.2,13.2h-8.7c-2.5,0-4.5-2-4.5-4.5V8.4z"/><path fill="rgb(248,136,0)" d="M41.5,52.5c0,2.5-2,4.5-4.5,4.5H15c-2.5,0-4.5-2-4.5-4.5V19.6c0-2.5,2-4.5,4.5-4.5h10v10.1c0,3.6,2.9,6.5,6.5,6.5h10.1V52.5z"/><path fill="rgb(248,136,0)" d="M40.2,29.6h-8.7c-2.5,0-4.5-2-4.5-4.5v-8.7L40.2,29.6z"/><path fill="rgb(248,136,0)" d="M48,48.9h-4.5V30.6c0,0,0,0,0-0.1c0-0.1,0-0.2,0-0.2l0-0.1c0-0.1-0.1-0.2-0.2-0.3L26.6,13.4c-0.1-0.1-0.2-0.1-0.3-0.2l-0.1,0c-0.1,0-0.2-0.1-0.3-0.1l-0.1,0h-4.5v-1.6C21.5,9,23.5,7,26,7h10v10.1c0,3.6,2.9,6.5,6.5,6.5h10.1v20.9C52.5,46.9,50.5,48.9,48,48.9z"/></svg>
             <h4>Form submissions</h4>
             <i>Tracks submitted forms.</i>
           </li>
           <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M27,42.1V21.9L40.2,32L27,42.1z M10.5,12C6.4,12,3,15.4,3,19.5v24.9c0,4.2,3.4,7.5,7.5,7.5h42c4.1,0,7.5-3.4,7.5-7.5V19.5c0-4.2-3.4-7.5-7.5-7.5H10.5z"/></svg>
             <h4>Media</h4>
             <i>Tracks HTML5 video, audio, YouTube and Vimeo players events.</i>
           </li>
           <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M20.4,20.9c0.5-0.4,0.6-1.2,0.1-1.7c-1.3-1.5-2-3.4-2-5.4c0-4.6,3.8-8.4,8.4-8.4c4.6,0,8.4,3.7,8.4,8.4c0,2-0.7,3.9-2,5.4c-0.4,0.5-0.4,1.3,0.1,1.7c0.2,0.2,0.5,0.3,0.8,0.3c0.4,0,0.7-0.1,0.9-0.4c1.7-1.9,2.6-4.4,2.6-7C37.8,7.8,33,3,27,3S16.1,7.8,16.1,13.8c0,2.6,0.9,5,2.6,7C19.1,21.3,19.9,21.3,20.4,20.9z"/><path fill="rgb(248,136,0)" d="M26.9,11.4c2.7,0,4.9,1.6,5.6,4.1c0.2-0.5,0.2-1.1,0.2-1.6c0-3.2-2.6-5.8-5.8-5.8s-5.8,2.6-5.8,5.8c0,0.5,0.1,1.1,0.2,1.5C22.1,13,24.2,11.4,26.9,11.4z"/><path fill="rgb(248,136,0)" d="M50.3,37.6c-0.8-4.6-4-5.3-5.5-5.4c-0.5,0-0.9-0.3-1.2-0.7c-1.1-1.7-2.6-2.1-3.8-2.1c-0.9,0-1.7,0.2-2.1,0.4c-0.1,0-0.1,0-0.2,0c-0.2,0-0.3-0.1-0.4-0.3c-1.1-1.9-2.7-2.4-4.1-2.4c-0.8,0-1.5,0.2-2,0.3c-0.1,0-0.2,0-0.2,0c-0.2,0-0.5-0.2-0.5-0.5v-9.8c0-2.2-1.7-3.4-3.4-3.4c-1.7,0-3.4,1.1-3.4,3.4v17.3c0,1-0.8,1.6-1.6,1.6c-0.5,0-1-0.2-1.3-0.8l-1.6-2.5c-0.7-1.2-1.8-1.7-2.8-1.7c-2.3,0-4.6,2.5-3,5.2l12.8,24.4c0.1,0.2,0.2,0.3,0.4,0.3h18c0.3,0,0.5-0.2,0.5-0.5l0.5-7.3c0-0.1,0-0.2,0.1-0.2C49.8,46.3,51,42,50.3,37.6z"/></svg>
             <h4>Call to actions</h4>
             <i>Tracks CTA links (mailto, tel, sms, skype, etc).</i>
           </li>
           <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M47.1,46.9v-1.1c0-3.7-4.3-5-6.5-6c-0.8-0.4-2.4-1.1-4-1.9c-0.5-0.3-1-1-1.1-1.6l-0.2-1.7c1.2-1.1,2.3-2.7,2.5-4.5h0.3c0.4,0,0.8-0.3,0.9-0.7l0.4-2.7c0.1-0.6-0.5-0.9-0.9-0.9l0-0.2c0.1-0.3,0.1-0.6,0.1-0.9c0-0.2,0-0.5,0.1-0.8c0-1.2-0.2-2.4-0.5-3c-0.4-0.9-0.9-1.7-1.7-2.4c-2.1-2-4.6-2.8-6.6-1.2c-1.4-0.2-3.1,0.4-4.3,1.8c-0.7,0.8-1.1,1.7-1.3,2.5C24.1,22.4,24,23,24,23.7c0,0.8,0,1.5,0.2,2.1c-0.4,0-0.8,0.4-0.8,0.9l0.4,2.7c0.1,0.4,0.5,0.7,0.9,0.7H25c0.4,1.9,1.4,3.5,2.5,4.6l-0.2,1.7c-0.1,0.6-0.5,1.3-1.1,1.6c-1.5,0.8-3.1,1.5-4,1.8c-2.1,0.9-6.5,2.3-6.5,6v0.8c-3.6-3.9-5.8-9-5.8-14.7c0-11.9,9.7-21.6,21.6-21.6S53.1,20.1,53.1,32C53.1,37.8,50.8,43,47.1,46.9z M31.5,5c-14.9,0-27,12.1-27,27s12.1,27,27,27s27-12.1,27-27S46.4,5,31.5,5z"/></svg>
             <h4>Logged in users</h4>
             <i>Tracks pageviews by users logged in to social networks.</i>
           </li>
           <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M47.9,12.4c0-1.9-1.5-3.4-3.4-3.4H18.6c-1.9,0-3.4,1.5-3.4,3.4v10.2h32.8V12.4z"/><path fill="rgb(248,136,0)" d="M46.2,32.8c-1,0-1.7-0.7-1.7-1.7c0-1,0.7-1.7,1.7-1.7c1,0,1.7,0.7,1.7,1.7C47.9,32.2,47.2,32.8,46.2,32.8zM51.3,24.3H11.7c-2.9,0-5.2,2.2-5.2,5.1v15.3c0,2.9,2.2,5.1,5.2,5.1h1.7V36.3h36.2v13.6h1.7c2.9,0,5.2-2.2,5.2-5.1V29.5C56.5,26.5,54.3,24.3,51.3,24.3z"/><path fill="rgb(248,136,0)" d="M18.6,48.2h25.9v1.7H18.6V48.2z M18.6,43.1h25.9v1.7H18.6V43.1z M15.1,51.6c0,1.9,1.6,3.4,3.4,3.4h25.9c1.9,0,3.4-1.5,3.4-3.4V38H15.1V51.6z"/></svg>
             <h4>Print</h4>
             <i>Tracks page print actions.</i>
           </li>
