Updated font on home page.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="kmt-page-content">
       <div class="kmt-section">
-        <h3>Advanced Metrics</h3>
+        <h3 class="thin-font">Advanced Metrics</h3>
         <p>Unlock power of digital analytics with additional insights about visitor’s behavior.</p>
         <ul class="kmt-metrics">
           <li>
@@ -118,7 +118,7 @@
            title="See all Komito metrics">See all metrics</a>
       </div>
       <div class="kmt-section gray-out">
-        <h3>Cross-Compatible</h3>
+        <h3 class="thin-font">Cross-Compatible</h3>
         <p>Komito Analytics is compatible with most popular web analytics software.</p>
         <ul>
           <li class="adobe-analytics">
