Updated home page.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div class="kmt-logo">
         <a href="/Komito/" title="Komito Homepage"><svg version="1.1"
            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
-           height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00"
-           points="0,0 0,20.1 19.8,0"/><polygon fill="#fb8600"
-           points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#097AD2"
+           height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
+           points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
+           points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#07d"
            points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span
            class="thin-font"><b>Komito</b><i>Analytics</i></span></a>
       </div>
