Added 'prerender' to home page.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="styles-v2.css" rel="stylesheet">
+<link rel="prerender" href="./integration/">
+<link rel="prerender" href="./demo/">
 </head>
 <body class="kmt-homepage">
   <div class="kmt-page">
