--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="styles-v2.css" rel="stylesheet">
-<link rel="prerender" href="./integration/">
-<link rel="prerender" href="./demo/">
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/integration/">
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/demo/">
 </head>
 <body class="kmt-homepage">
   <div class="kmt-page">
