--- a/integration/index.html
+++ b/integration/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
+<script>if('http:'==location.protocol)location.replace(location.href.replace('http:','https:'))</script>
 <title itemprop="name">Komito Analytics Integration Instructions</title>
 <meta name="og:title" content="Komito Analytics Integration Instructions">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -20,7 +21,8 @@
 <link href="/Komito/styles.css" rel="stylesheet">
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
 <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
-<script>if('https:'==location.protocol)location.replace(location.href.replace('https:','http:'))</script>
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/">
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/demo/">
 </head>
 <body class="dtm-page-komito dtm-product">
 <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
