Added 'prerender' to other pages.

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
 <meta itemprop="url" content="http://datamart.github.io/Komito/demo">
 <link rel="canonical" href="http://datamart.github.io/Komito/demo">
 <link href="/Komito/favicon.ico" rel="shortcut icon">
-<link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
+<link href="https://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
 <link href="/Komito/styles.css" rel="stylesheet">
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
 <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
