Updated thin font.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </div>
     </div>
     <div class="kmt-page-hero">
-      <div class="kmt-section">
-        <h1 class="thin-font">Komito Analytics at a Glance</h1>
+      <div class="kmt-section thin-font">
+        <h1>Komito Analytics at a Glance</h1>
         <h2>Komito Analytics is an enhancement for the most popular web analytics software.</h2>
       </div>
     </div>
