--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
             <i>Tracks page print actions.</i>
           </li>
         </ul>
-        <a href="./integration/#parameters" class="button gray-out"
+        <a href="./integration/#parameters" class="button grayscale"
            title="See all Komito metrics">See all metrics</a>
       </div>
-      <div class="kmt-section gray-out">
+      <div class="kmt-section grayscale">
         <h3 class="thin-font">Cross-Compatible</h3>
         <p>Komito Analytics is compatible with most popular web analytics software.</p>
         <ul>
@@ -161,7 +161,7 @@
            class="button">See integration instructions</a>
         <i class="or">-&nbsp;OR&nbsp;-</i>
         <a href="//github.com/Datamart/Komito/tree/master"
-           class="button gray-out"
+           class="button grayscale"
            target="_blank"
            title="Get Komito Analytics source code">Get source code</a>
       </div>
