--- a/integration/v2.html
+++ b/integration/v2.html
@@ -255,7 +255,7 @@
           <!-- <em>Still have a questions?</em> -->
           <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
           <i class="or">-&nbsp;OR&nbsp;-</i>
-          <a href="../demo/v2.html" class="button gray-out" title="See Komito Analytics demo page">See Demo</a>
+          <a href="../demo/v2.html" class="button grayscale" title="See Komito Analytics demo page">See Demo</a>
         </p>
       </div>
     </div>
