Updated logo title.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Homepage"><svg version="1.1"
+        <a href="/Komito/" title="Komito Analytics"><svg version="1.1"
            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
            height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
            points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
