--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       <div class="kmt-navigation">
         <ul>
           <li>
-            <a href="./"
-               class="kmt-current-page"
+            <a href="./" class="kmt-current-page"
                title="Komito Analytics overview page.">Overview</a>
           </li>
           <li>
@@ -67,9 +66,8 @@
                title="Komito Analytics demo page.">Demo</a>
           </li>
           <li>
-            <a href="//github.com/Datamart/Komito/tree/master"
-               target="_blank"
-               title="Get Komito Analytics Source Code.">Get source code</a>
+            <a href="//github.com/Datamart/Komito/tree/master" target="_blank"
+               title="Get Komito Analytics source code.">Get source code</a>
           </li>
         </ul>
       </div>
