--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <div class="kmt-section info">
         Privacy is not a question: Komito Analytics does not store any data.<br>
-        Why? Because it's a extension, not a service.
+        Why? Because it's an extension, not a service.
       </div>
     </div>
     <div class="kmt-page-footer">
