Updated footer link.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <br>
         <span>
           © <script>document.write((new Date).getFullYear())</script>
-          <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+          <a href="https://www.dtm.io" title="Datamart Inc.">Datamart Inc.</a>
         </span>
       </p>
     </div>
