--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                title="Komito Analytics demo page.">Demo</a>
           </li>
           <li>
-            <a href="//github.com/Datamart/Komito/tree/master" target="_blank"
+            <a href="//github.com/Datamart/Komito/tree/master"
                title="Get Komito Analytics source code.">Get source code</a>
           </li>
         </ul>
@@ -160,7 +160,6 @@
         <i class="or">-&nbsp;OR&nbsp;-</i>
         <a href="//github.com/Datamart/Komito/tree/master"
            class="button grayscale"
-           target="_blank"
            title="Get Komito Analytics source code">Get source code</a>
       </div>
       <div class="kmt-section info">
@@ -173,8 +172,7 @@
          class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
          width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
       <p>Komito Analytics is subject to the terms and conditions of
-        <a href="//www.apache.org/licenses/LICENSE-2.0"
-           rel="nofollow"
+        <a href="//www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
            title="Apache License">Apache License 2.0</a>
         <br>
         <span>
