Updated demo sources to HTTPS.

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,13 +9,13 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
 <meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
-<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
+<meta name="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.png">
+<meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@vpodk">
-<meta name="twitter:url" content="http://datamart.github.io/Komito/demo">
-<meta itemprop="url" content="http://datamart.github.io/Komito/demo">
-<link rel="canonical" href="http://datamart.github.io/Komito/demo">
+<meta name="twitter:url" content="https://datamart.github.io/Komito/demo">
+<meta itemprop="url" content="https://datamart.github.io/Komito/demo">
+<link rel="canonical" href="https://datamart.github.io/Komito/demo">
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="https://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
 <link href="/Komito/styles.css" rel="stylesheet">
@@ -115,7 +115,7 @@
       <div class="dtm-grid-cell cell-span2">
         <div class="dtm-cell-body">
           <ul>
-            <li><a target="_blank" href="http://dtm.io/">Datamart</a></li>
+            <li><a target="_blank" href="//dtm.io">Datamart</a></li>
             <li><a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a></li>
             <li><a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a></li>
           </ul>
@@ -144,9 +144,9 @@
         <div class="dtm-cell-body">
           <ul>
             <li><a target="_blank"
-   href="http://dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf">Datamart-WebAnalytics-CaseStudy.pdf</a></li>
+   href="https://dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf">Datamart-WebAnalytics-CaseStudy.pdf</a></li>
             <li><a target="_blank"
-   href="http://dl.google.com/closure-compiler/compiler-latest.zip">Google-Closure-Compiler.zip</a></li>
+   href="https://dl.google.com/closure-compiler/compiler-latest.zip">Google-Closure-Compiler.zip</a></li>
           </ul>
         </div>
       </div>
@@ -216,11 +216,11 @@
       <div class="dtm-grid-cell cell-span4">
         <div class="dtm-cell-body">
           <video width="460" height="260" controls>
-            <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
+            <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                     type="video/mp4">
-            <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
+            <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
                     type="video/webm">
-            <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
+            <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
                     type="video/ogg">
           </video>
           <iframe src="https://www.youtube.com/embed/aqz-KE-bpKQ"
@@ -246,7 +246,7 @@
             <li>
               <b>Twitter</b>
               <script type="text/javascript"
-                      src="http://platform.twitter.com/widgets.js"></script>
+                      src="https://platform.twitter.com/widgets.js"></script>
               <a href="//twitter.com/share" class="twitter-share-button"
                  data-lang="en">Tweet</a>
               <a href="//twitter.com/vpodk" class="twitter-follow-button"
@@ -257,7 +257,7 @@
             <li>
               <b>LinkedIn</b>
               <script type="text/javascript"
-                      src="http://platform.linkedin.com/in.js"></script>
+                      src="https://platform.linkedin.com/in.js"></script>
               <script type="IN/Share" data-counter="right"></script>
               <script type="IN/FollowCompany" data-id="6442972"
                       data-counter="right"></script>
@@ -267,15 +267,15 @@
               <script type="text/javascript" id="facebook-jssdk"
                       src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
               </script>
-              <div class="fb-like" data-href="http://datamart.github.io/Komito/"
+              <div class="fb-like" data-href="https://datamart.github.io/Komito/"
                    data-layout="button" data-action="like" data-show-faces="false"
                    data-share="false"></div>
               <div class="fb-share-button"
-                   data-href="http://datamart.github.io/Komito/"></div>
-              <div class="fb-send" data-href="http://datamart.github.io/Komito/"
+                   data-href="https://datamart.github.io/Komito/"></div>
+              <div class="fb-send" data-href="https://datamart.github.io/Komito/"
                    data-colorscheme="light"></div>
               <div class="fb-follow"
-                   data-href="http://datamart.github.io/Komito/"
+                   data-href="https://datamart.github.io/Komito/"
                    data-colorscheme="light"
                    data-layout="button" data-show-faces="false"></div>
               <div id="fb-root" class="fb_reset"></div>
@@ -300,7 +300,7 @@
         <div class="dtm-grid-row">
           <div class="dtm-grid-cell cell-span4">
             <div class="dtm-cell-body">
-              <a href="http://dtm.io" title="Datamart Inc."
+              <a href="https://dtm.io" title="Datamart Inc."
                  style="margin-top:1.6em"
                  class="dtm-ext-logo"><svg version="1.1" id="dtmLogo"
                  xmlns="http://www.w3.org/2000/svg"
@@ -316,10 +316,10 @@
             <div class="dtm-cell-body">
               <p style="text-align:right;margin-top:.8em">
                 Komito Analytics is subject to the terms and conditions of
-                <a href="http://www.apache.org/licenses/LICENSE-2.0"
+                <a href="https://www.apache.org/licenses/LICENSE-2.0"
                    rel="nofollow"
                    title="Apache License">Apache License 2.0</a>
-                <br>© 2016 <a href="http://dtm.io"
+                <br>© 2016 <a href="https://dtm.io"
                   title="Datamart Inc.">Datamart Inc.</a>
               </p>
             </div>
