Updated home page footer.

--- a/index.html
+++ b/index.html
@@ -2,34 +2,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-<script>if('http:'==location.protocol)location.replace(location.href.replace('http:','https:'))</script>
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
 <title>Komito Analytics at a Glance</title>
-<link rel="canonical" href="http://datamart.github.io/Komito/">
+<link rel="canonical" href="https://datamart.github.io/Komito/">
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 <meta name="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 
 <meta itemprop="name" content="Komito Analytics at a Glance">
-<meta itemprop="url" content="http://datamart.github.io/Komito/">
+<meta itemprop="url" content="https://datamart.github.io/Komito/">
 <meta itemprop="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
-<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics at a Glance">
-<meta property="og:url" content="http://datamart.github.io/Komito/">
+<meta property="og:url" content="https://datamart.github.io/Komito/">
 <meta property="og:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
-<meta property="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics at a Glance">
-<meta name="twitter:url" content="http://datamart.github.io/Komito/">
+<meta name="twitter:url" content="https://datamart.github.io/Komito/">
 <meta name="twitter:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
-<meta name="twitter:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="styles-v2.css" rel="stylesheet">
@@ -175,9 +174,15 @@
         <a href="//www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
            title="Apache License">Apache License 2.0</a>
         <br>
-        <span>
+        <span itemprop="publisher" itemscope
+              itemtype="http://schema.org/Organization">
           © <script>document.write((new Date).getFullYear())</script>
-          <a href="//www.dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+          <a itemprop="url" href="//www.dtm.io" title="Datamart Inc."><span
+             itemprop="name">Datamart Inc.</span></a>
+          <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
+          <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
+          <meta itemprop="sameAs" content="https://www.facebook.com/datamartinc">
+          <meta itemprop="sameAs" content="https://twitter.com/thedatamartinc">
         </span>
       </p>
     </div>
